css/style.css
* {
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
    width: 100%;
}

/* GRID */

.gridwrapper {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(6, auto);
    grid-template-areas: "headergrid" "navgrid" "contentgrid" "asidegrid" "gallerygrid" "footergrid";
}

/* GRID Header */

.grid-header {
    grid-area: headergrid;
}

.forsidebillede img {
    width: 100%;
}

/* GRID Nav */

.grid-nav {
    grid-area: navgrid;
    text-align: center;
    font-size: 30px;
}

.grid-nav img {
    width: 350px;
}

/* NAV */

nav {
    overflow: hidden;
}

nav a {
    display: inline-block;
    vertical-align: middle;
    color: #003758;
    text-align: center;
    padding: 10px 10px;
    text-decoration: none;
    border-bottom: 3px solid transparent;
    font-family: 'ubuntulight', sans-serif;
}

nav a:hover {
    border-bottom: 1px solid #003758;
}

nav a.nohover {
    border-bottom: 0px solid #003758;
}

nav a.active {
    font-family: 'ubuntumedium', sans-serif;
}


/* GRID Content */

.grid-content {
    grid-area: contentgrid;
    margin: 0px;
}

/* Content - index.html */

.content {
    height: 250px;
}

.ugensfisk_row img {
    width: 50%;
}

.content h2 {
    text-align: center;
    font-size: 70px;
    color: #003758;
    padding: 40px 0 10px 0;
    font-family: 'ubuntumedium', sans-serif;
    border-bottom: 1px solid #003758;
    width: 32%;
    margin: 0 auto 20px auto;
}

.ugens-fisk_content {
    font-family: 'latolight', sans-serif;
    font-size: 30px;
    color: #003758;
}

.ugens-fisk_content b {
    font-family: 'latomedium', sans-serif;
}

.ugensfisk_row {
    display: flex;
    flex-wrap: wrap;
    margin: 0 0 100px 0;
}

.ugensfisk_column {
    flex: 10%;
    align-self: center;
}


/* Content - menu.html */

.chalkboard {
    background-image: url(../images/menu/chalkboard.jpg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    height: 1550px;
    margin: 0 50px 0 50px;
}

.menu-body {
    max-width: 40%;
    margin: 0px 100px;
    display: block;
    color: white;
}

.menu-section {
    margin-bottom: 80px;
    margin-top: 15px;
}

.menu-section-title {
    font-family: 'chalk_dashregular', sans-serif;
    font-size: 100px;
    display: block;
    font-weight: normal;
    margin: 70px 0 10px 0;
    text-align: Center;
    color: white;
    letter-spacing: 7px;
}

.menu-item {
    margin: 5px 0;
    font-size: 18px;
}

#menu-undertekst {
    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
    color: #ff1e00;
    font-size: 20px;
    width: 230px;
    height: 80px;
    -ms-transform: rotate(15deg);
    -webkit-transform: rotate(15deg);
    transform: rotate(-15deg);
    position: relative;
    bottom: 2%;
    left: 70%;
}

.menu-item-name {
    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
    font-size: 24px;
}

.menu-item-description {
    font-style: italic;
    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
    font-size: .9em;
    line-height: 1.5em;
    margin: 5px 0;
}

.menu-item-price {
    float: right;
    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
    margin-top: -30px;
    font-size: 24px;
}

.drikkevarer {
    position: relative;
    bottom: 28%;
}

.menufloat {
    position: relative;
    bottom: 410px;
    left: 48%;
    max-width: 40%;
    margin: 0px 50px;
    display: block;
    color: white;
}

.menufloat2 {
    position: relative;
    bottom: 585px;
    left: 48%;
    max-width: 40%;
    margin: 0px 50px;
    display: block;
    color: white;
}

/* Content - om_os.html */

.historie {
    margin: 25px;
    padding: 25px;
    background-color: #003758;
    color: white;
    font-family: 'latolight', sans-serif;
    height: 100%;
    position: relative;
    bottom: 25px;
    text-align: center;
}

.historie h1 {
    position: relative;
    font-family: 'ubunturegular', sans-serif;
    font-size: 50px;
    text-align: left;
    margin: 0 0 20px 0;
}

.historie_column {
    width: 100%;
    text-align: center;
    font-family: 'latolight', sans-serif;
    color: white;
}

.historie_column img {
    width: 650px;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.2);
}

.historie_column p {
    text-align: left;
}

.historie_row p {
    width: 100%;
    position: relative;
    font-size: 26px;
}

.historie_row {
    display: flex;
}

/* Content - kontakt.html */

.kontakt {
    background-color: #C0D7EF;
    padding: 75px 100px;
    height: 720px;
}

.kontakt h2 {
    margin: 0px 0px 50px 0px;
    font-family: 'ubunturegular', sans-serif;
}

.findos {
    width: 50%;
    font-family: 'latolight', sans-serif;
    color: #003758;
    font-size: 24px;
}

.findos h2 {
    font-size: 50px;
}

/* Kontaktform fundet via. w3schools, videreudviklet af os */

/* https://www.w3schools.com/howto/howto_css_contact_form.asp */

input[type=text],
select,
textarea {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: none;
}

input[type=submit] {
    background-color: #003758;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-family: 'latomedium', sans-serif;
}

input[type=submit]:hover {
    background-color: #075db7;
}

.kontaktform {
    border-radius: 5px;
    background-color: #C0D7EF;
    padding: 20px;
    font-family: 'latoregular', sans-serif;
    color: #003758;
}

.kontaktform h3 {
    font-family: 'ubunturegular', sans-serif;
    font-size: 22px;
    width: 100%;
    color: #003758;
}

.findos_flexrow {
    display: flex;
}

.findos_flexcolumn {
    flex: 0%;
}

/* Content - opskrifter.html */

.opskrift {
    background-color: #C0D7EF;
    position: relative;
    padding: 100px 20px 350px 20px;
    font-family: 'latomedium', sans-serif;
    color: #003758;
    display: flex;
    flex-wrap: wrap;
}
/* ... */

